compiler/e2e/test/snapshot/memory_checker/memory_checker_in_closure/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the value is used after it has been moved
   ╭─ compiler/e2e/test/snapshot/memory_checker/memory_checker_in_closure/main.pnx:23:14
   │
22 │         drop(nc)
   │              -- the value was moved here
23 │         drop(nc) # this is not fine
   │              ^^

error: the value is used after it has been moved
   ╭─ compiler/e2e/test/snapshot/memory_checker/memory_checker_in_closure/main.pnx:29:18
   │
28 │             drop(nc)
   │                  -- the value was moved here
29 │             drop(nc) # this is not fine
   │                  ^^

error: Compilation aborted due to 2 error(s)



stdout:
